Start of settings window, additional autosave considerations, code cleanup, added window icon

--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ enable.dev
 # Program Generated Files #
 ###########################
 **/*.fits
-**/*.png
+# **/*.png
 **/*.dat
 # **/*.txt
 **/*.csv
